# mkvm

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  platform_compatibility.yml  setup_help.yml
.github/workflows/: ci-docs.yml  ci.yml  release.yml
scripts/: build-mac-arm.sh  build-tauri-assets.mjs  check-dev-env.ps1  check-dev-env.sh  fix-appimage.sh  install-mac-app.sh  run-tauri-dev.ps1  run-tauri-dev.sh  sign-mac-app.sh
src/: App.css  App.tsx  constants.ts  defaultLayout.ts  desktopApi.ts  i18n.ts  layout.ts  types.ts
src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/input-helper/: Cargo.toml
src-tauri/input-helper/src/: main.rs
src-tauri/src/: input.rs  lib.rs  linux_input.rs  main.rs  quic_transport.rs  shared_input.rs  windows_input.rs
